# dot-prompt

./: .editorconfig  .gitignore  Dockerfile  Dockerfile.headless  Makefile  Readme.md  docker-compose.yml  documentation.md
.kilocode/: mcp.json
.kilocode/agents/: code-janitor.md
.kilocode/commands/: consensus.md
.opencode/agents/: DocSync-Agent.md  The-agency-UX-designer copy.md  The-agency-ui-designer.md  architect.md  doc-updater.md  planner.md  security-reviewer.md
.opencode/commands/: amend-commit.md  codereview.md  ultraplan.md
agents/: developer.md
agents/skills/: dotprompt_language.md  dotprompt_packages.md
clients/go/: async_client.go  transport.go
clients/python/: README.md  pyproject.toml  python_client_plan.md
clients/typescript/: README.md  package-lock.json  package.json
compilers/elixir/: README.md  mix.exs
compilers/go/: compat_test.go  compiler.go  compiler_role_test.go  compiler_test.go  integration_role2_test.go  lexer.go  parser.go  (+4 more)
docs/: language.md
dot-prompt-python-client/: README.md
dot-prompt_site/: .gitignore  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
dot-prompt_vscode/: package.json
dot_prompt/: .dockerignore  .gitignore  Dockerfile  Dockerfile.headed  Dockerfile.headless  README.md  docker-compose.yml  mix.exs  test_schema.exs
plans/: dot_prompt_editor_v4.html  error-handling-plan.md  main_plan.md  main_plan_v2.md  params-dropdown-plan.md  prompt-editor-in-place-editing.md  test_coverage_remediation_plan.md  vscode_compiled_view_webview_plan.md  website_plan.md
server/: mix.exs
(+178 files in other folders)
