[project]
name = "dotprompt-client"
version = "0.1.6"
description = "Python client for dotprompt - requires dotprompt/runtime or dotprompt/runtime-dev Docker container. Website: https://dotprompt.run"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "dot-prompt team" }]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://dotprompt.run"
Repository = "https://github.com/dot-prompt/dot-prompt"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "pytest-mock",
    "ruff",
    "mypy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "0.1.6"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "0.1.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
